--- a/css/main.css
+++ b/css/main.css
@@ -673,5 +673,6 @@ input[type="submit"].button-grey:active {
   .join input[type=email] {
     width: 100%;
     height: auto;
+    margin-bottom: 10px;
   }
 }
